--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
 
     <link href="https://fonts.googleapis.com/css?family=Karla|Shadows+Into+Light" rel="stylesheet">
     <link rel="stylesheet" href="./style.css" />
-    <link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet/v0.7.7/leaflet.css" />
+    <link rel="stylesheet" href="https://cdn.leafletjs.com/leaflet/v0.7.7/leaflet.css" />
     <link rel="stylesheet" href="https://unpkg.com/react-bootstrap-typeahead/css/Typeahead.css">
     <script type="text/javascript" defer src="/bundle.js"></script>
 </head>
